--- a/index.html
+++ b/index.html
@@ -147,16 +147,15 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>Cilendek Timur RT 004/RW 005,<br />
-								kec.Bogor Barat, Kota Bogor</p>
+								<p>Kota Bogor</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">+6281382100221</a></p>
+								<p><a href="#">+6285964283733</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">ryansena@gmail.com</a></p>
+								<p><a href="#">muhriyansena@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
